--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,5 +4,8 @@ require:
 Style/Documentation:
   Enabled: false
 Metrics/MethodLength:
+  Max: 15
   Exclude:
-    - 'db/migrate/*'
+    - "db/migrate/*"
+Metrics/AbcSize:
+  Max: 40
